2006-07-26  John W. Eaton  <jwe@octave.org>

	* dbleDET.cc (DET::initialize10, DET::value_will_underflow,
	DET::value_will_overflow): Use xlog2 instead of log2.
	(DET::initialize2, DET::initialize10): Use xround instead of round.
	(DET::initialize2, DET::value): Use xexp2 instead of exp2.
	* CmplxDET.cc (ComplexDET::initialize10,
	ComplexDET::value_will_underflow,
	ComplexDET::value_will_overflow): Use xlog2 instead of log2.
	(ComplexDET::initialize2, ComplexDET::initialize10):
	Use xround instead of round.
	(ComplexDET::initialize2, ComplexDET::value):
	Use xexp2 instead of exp2.

	* lo-mappers.cc (M_LOG10E): Delete unused macro.
	(xlog2, xexp2): New functions.
	* lo-mappers.h: Provide decls.

2006-07-22  John W. Eaton  <jwe@octave.org>

	* Sparse.h (Sparse<T>::mex_get_data, Sparse<T>::mex_get_ir,
	Sparse<T>::mex_get_jc): New functions.

2006-07-21  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int<T>::mex_get_data): New function.
	* Array.h (Array<T>::mex_get_data): New function.

2006-07-19  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int::operator bool (void)): New function.

2006-07-16  John W. Eaton  <jwe@octave.org>

	* oct-spparms.h, oct-spparms.cc (class octave_sparse_params):
	Rename from SparseParams.  Use same implementation method as other
	singleton classes in Octave.  Change all uses of
	Voctave_sparse_controls to use static functions from
	octave_sparse_params class instead.

	* oct-spparms.h, oct-spparms.cc (SparseParams::set_key,
	SparseParams::get_key): Pass std::string arg by const reference,
	not const value.

2006-07-15  John W. Eaton  <jwe@octave.org>

	* data-conv.cc: Instantiante swap_bytes templates here.

	* MatrixType.cc (MatrixType::MatrixType):
	Use complete initializer lists in constructors.

2006-07-06  John W. Eaton  <jwe@octave.org>

	* str-vec.cc (string_vector::string_vector (std::list<std::string>&)):
	New constructor.
	* str-vec.h: Provide decl.

2006-07-01  David Bateman  <dbateman@free.fr>
